feature/event-show-join-member-layout

--- a/app/views/public/activities/_form.html.haml
+++ b/app/views/public/activities/_form.html.haml
@@ -14,7 +14,7 @@
           %tr
             %th{scope:"row"} 活動報告「Youtube動画」
             %td
-              = f.text_field :youtube_url, placeholder: 'youtubeの動画URLを記載してください', class: 'form-control'
+              = f.text_field :youtube_url, placeholder: 'youtubeの動画URL（上部アドレスバーのURL）を記載', class: 'form-control'
           %tr
             %th{scope:"row"} 活動報告「タイトル」
             %td
