--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -186,7 +186,22 @@
     }
     .join-member{
       font-weight: bold;
-      font-size: 20px;
+      font-size: 15px;
+      margin-bottom: 50px;
+      .member{
+        display: flex;
+      }
+      .image-style{
+        text-decoration: none;
+        margin-right: 10px;
+        .icon_mini{
+          width: 50px;
+          height: 50px;
+          object-fit: cover;
+          border-radius: 10px;
+          cursor: pointer;
+        }
+      }
     }
     input[type="submit"] {
       width: 20%;
