--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -4,7 +4,8 @@
       .col-8
         .top-message
           %h1 be My Style
-          %p あなたの「やりたい！」を叶える場所！
+          %p あなたの「やりたい！」を叶える場所！」
+          %p 利用可能時間【9:00~24:00】
       .col-4
         %ul.list-style-none.header-sign-in-list
           - if customer_signed_in?
