--- a/app/assets/stylesheets/public/header_menu.scss
+++ b/app/assets/stylesheets/public/header_menu.scss
@@ -65,12 +65,16 @@
       width: 90%;
       height: 50px;
       background-color: lightblue;
-      margin: 0 auto 0 auto;
+      margin: 0 auto;
       border-radius: 10px;
       ul{
         display: flex;
         align-items: center;
+        justify-content: center;
         height: inherit;
+      }
+      .flex-item{
+        width: 100%;
       }
     }
   }
