--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -8,7 +8,9 @@
     margin-left: 20px;
   }
 }
-
+.events-kaminari{
+  margin: 10px auto;
+}
 .event-index-container{
   position: relative;
   display: flex;
@@ -16,10 +18,24 @@
   width: 90%;
   margin: 0 auto;
   .end-event{
+    padding: 5px;
     text-align: center;
     background-color: red;
     color: white;
-    width: 100px;
+    width: 110px;
+    z-index: 100px;
+    border: solid 2px white;
+    border-radius: 10px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+  }
+  .active-event{
+    padding: 5px;
+    text-align: center;
+    background-color: blue;
+    color: white;
+    width: 110px;
     z-index: 100px;
     border: solid 2px white;
     border-radius: 10px;
