--- a/app/views/kaminari/_page.html.haml
+++ b/app/views/kaminari/_page.html.haml
@@ -3,4 +3,4 @@
     = content_tag :a, page, data: { remote: remote }, rel: page.rel, class: 'page-link'
 - else
   %li.page-item
-    = link_to page, url, remote: remote, rel: page.rel, class: 'page-link'
+    = link_to page, url, remote: remote, rel: page.rel, class: 'page-link', data: { 'turbolinks': false }
