fix/kaminari-width

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -60,9 +60,9 @@ font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans
 
 .pagination{
   margin: auto;
-  width: 50%;
+  width: 90%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .pagination span{
   background-color: rgba(158, 158, 158, 0.4);
