--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -17,6 +17,12 @@
   flex-wrap: wrap;
   width: 90%;
   margin: 0 auto;
+  .event-community-name{
+    text-align: center;
+    font-weight: bold;
+    border: solid 1px black;
+    border-radius: 5px;
+  }
   .end-event{
     padding: 5px;
     text-align: center;
@@ -27,7 +33,7 @@
     border: solid 2px white;
     border-radius: 10px;
     position: absolute;
-    top: 5px;
+    top: 30px;
     left: 5px;
   }
   .active-event{
@@ -40,7 +46,7 @@
     border: solid 2px white;
     border-radius: 10px;
     position: absolute;
-    top: 5px;
+    top: 30px;
     left: 5px;
   }
   .img-container{
