--- a/app/views/public/communities/show.html.haml
+++ b/app/views/public/communities/show.html.haml
@@ -51,6 +51,7 @@
                 .dropdown-menu{"aria-labelledby" => "dropdownMenuButton"}
                   = link_to "承認待ち一覧確認", public_permits_path(@community), data: { 'turbolinks': false }, class: "dropdown-item btn btn-sm btn-info community-show-btn dropdown-item text-secondary bg-transparent"
                   = link_to 'メンバーへメール', public_community_new_mail_path(@community), data: { 'turbolinks': false }, class: "dropdown-item btn btn-info community-show-btn text-secondary bg-transparent"
+                  = link_to "イベント作成", new_public_event_path, data: { 'turbolinks': false }, class: "dropdown-item btn btn-info community-show-btn text-secondary bg-transparent"
                   = link_to 'コミュニティ編集', edit_public_community_path(@community), data: { 'turbolinks': false }, class: "dropdown-item btn btn-sm btn-success community-show-btn dropdown-item text-secondary bg-transparent"
                   = link_to 'コミュニティ削除', public_community_path(@community), method: :delete, data: { 'turbolinks': false, confirm: 'こちらのコミュニティを削除します。よろしいですか？' }, class: "dropdown-item btn btn-sm btn-danger community-show-btn dropdown-item text-secondary bg-transparent"
             - elsif @community.customers.include?(current_customer)
@@ -83,6 +84,10 @@
                 - else
                   コミュニティに参加するとチャットできます。
             - if @community.owner_id == current_customer.id
+              %tr
+                %th{scope:"row"} イベントを作成
+                %td
+                  = link_to "イベント作成", new_public_event_path, data: { 'turbolinks': false }, class: "btn btn-info event-index-create-btn"
               %tr
                 %th{scope:"row"} メンバーへメール
                 %td
